--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
     "jquery": "3.1.1",
-    "reflect-metadata": "0.1.9",
+    "reflect-metadata": "^0.1.9",
     "rxjs": "5.1.0",
     "ts-helpers": "1.1.2",
-    "zone.js": "0.8.4"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.2",
+    "@angular/cli": "1.4.3",
     "@angular/compiler-cli": "4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "7.0.5",
